added schedule & projected schedule

--- a/src/css/01_table.styl
+++ b/src/css/01_table.styl
@@ -12,5 +12,6 @@ table
     th
     td
         text-align left
+        white-space nowrap
         vertical-align middle
         padding 5px 20px
