--- a/src/css/00_main.styl
+++ b/src/css/00_main.styl
@@ -19,6 +19,7 @@ body
     width 100%
     overflow hidden
     background-color $bg
+    overflow-y scroll
 
 main
     absolute top right bottom left
