--- a/src/css/10_note.styl
+++ b/src/css/10_note.styl
@@ -33,3 +33,14 @@
 .meta
     strong
         margin-right 5px
+
+table
+    .player
+        padding-left 20px
+        padding-right 20px
+    .bold
+        font-weight bold
+    .player-position
+        font-size 10px
+        padding-left 5px
+        opacity .7
