--- a/src/css/00_main.styl
+++ b/src/css/00_main.styl
@@ -17,13 +17,10 @@ body
     color $text
     height 100%
     width 100%
-    overflow hidden
     background-color $bg
     overflow-y scroll
 
 main
     absolute top right bottom left
     height 100%
-    overflow hidden
-    padding-top 45px
-    padding-bottom 100px
+    padding 45px 15px 100px
