display power rankings

--- a/src/css/00_main.styl
+++ b/src/css/00_main.styl
@@ -24,3 +24,22 @@ main
     absolute top right bottom left
     height 100%
     padding 45px 15px 100px
+
+.meta
+    margin-bottom 5px
+    strong
+        margin-right 5px
+    p
+        font-size 1.05em
+        line-height 140%
+
+.header
+    text-align center
+    font-family Lato,'Helvetica Neue',Arial,Helvetica,sans-serif
+    margin-bottom 55px
+    h1
+        font-size 2em
+    h3
+        font-size 0.8rem
+        font-weight 300
+        margin-bottom 7px
