--- a/src/css/10_menu.styl
+++ b/src/css/10_menu.styl
@@ -3,7 +3,7 @@
 
 .menu
     max-width 550px
-    margin 0 auto
+    margin 45px auto 0
     display flex
     border-bottom 2px solid rgba(34,36,38,.15)
     a
