--- a/src/css/10_note.styl
+++ b/src/css/10_note.styl
@@ -1,20 +1,10 @@
 @import '00_variables.styl'
 @import 'nib'
 
-.header
-    text-align center
-    font-family Lato,'Helvetica Neue',Arial,Helvetica,sans-serif
-    h1
-        font-size 2em
-    h3
-        font-size 0.8rem
-        font-weight 300
-        margin-bottom 7px
-
 .body
     form
         max-width 550px
-        margin 45px auto
+        margin 0 auto
     textarea
         background white
         resize none
@@ -29,10 +19,6 @@
             background #E0E1E2
             border-radius 3px
             font-weight bold
-
-.meta
-    strong
-        margin-right 5px
 
 table
     .player
