added tiers to power ranking display

--- a/src/css/10_team.styl
+++ b/src/css/10_team.styl
@@ -1,9 +1,24 @@
 @import '00_variables.styl'
 @import 'nib'
 
+.tier
+    display table
+    white-space nowrap
+    width 100%
+    line-height 1
+    text-align center
+    background white
+    padding 5px 0
+    font-size 1.2em
+    margin-bottom 45px
+
 .team
-    max-width 550px
+    max-width 750px
     margin 15px auto 45px
     h2
         font-size 1.5em
         margin-bottom 10px
+    p
+        font-family Lato,'Helvetica Neue',Arial,Helvetica,sans-serif
+        font-size 16px
+        font-weight 300
