show updated at

--- a/src/html/partials/notes.jade
+++ b/src/html/partials/notes.jade
@@ -85,3 +85,5 @@
                 td {{= (game.score || game.projected_score) }} - {{= (game.opponent_score || game.opponent_projected_score) }}
                 td {{= game.result }}
             {{~}}
+.footer
+    .meta Projections last updated on {{= it.updated }}
