add power ranking change

--- a/src/css/10_note.styl
+++ b/src/css/10_note.styl
@@ -20,6 +20,16 @@
             border-radius 3px
             font-weight bold
 
+.negative
+    color #e57373
+    font-weight bold
+    margin-left 10px
+
+.positive
+    color #8bc34a
+    font-weight bold
+    margin-left 10px
+
 table
     .player
         padding-left 20px
